<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarritoCompras">
    <include layout="@layout/toolbar"/>

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="comprar"
        android:text="@string/btnComprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="104dp"
        android:layout_marginTop="95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ListView
        android:id="@+id/listaCarritoCompras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="117dp"
        android:layout_marginStart="117dp"
        android:text="@string/Total"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintStart_toStartOf="@+id/listaCarritoCompras" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintStart_toEndOf="@+id/btnComprar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/listaCarrito"
        app:layout_constraintEnd_toEndOf="@+id/listaCarritoCompras"
        app:layout_constraintStart_toStartOf="@+id/listaCarritoCompras"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
</androidx.constraintlayout.widget.ConstraintLayout>